blocks/header/header.css
/* ... */
/* Div element to encapsulate the navigation menu */
header .nav-wrapper {
  z-index: 6;
  position: relative;
  max-width: 132rem;
  margin: 0 auto;
}

/* Styling for the div container that holds the two versions of the logo image */
header .nav-logo {
  position: absolute;
  color: var(--text-color);
  left: 2rem;
  top: 2.2rem;
  width: 10.2rem;
  z-index: 7;
}

/* Styling of the full logo image displayed in desktop mode before scrolling down as well as mobile */
header .nav-logo-big {
  color: var(--nav-logo-color);
  left: 1.8rem;
  position: absolute;
  top:0;
  height: 3.2rem;
  width:100%;
  bottom: 1.85rem;
  transition: opacity .36s ease-in-out,transform .36s ease-in-out,-webkit-transform .36s ease-in-out;
}

/* Define the layout of the main nav container which houses all the buttons */
header #nav {
  align-items: center;
  margin: auto;
  padding: 0 1rem;
  background-color: transparent;
}

/* Divider between section and tool menus in mobile mode */
header hr.nav-section-divider {
  display: none;

  /* Need to fix the animation by splitting the display and animatable properties to two steps */
  transition: opacity .36s ease-in-out,transform .36s ease-in-out,-webkit-transform .36s ease-in-out;
}

header #nav p {
  margin: 0;
  line-height: 1;
}

header #nav a:any-link {
  color: currentcolor;
}

header .header-navigation {
  width: 100%;
  display: flex;
  flex-flow: column-reverse nowrap;
  justify-content: space-between;
}

/* Common styling for all the nav sections */
header .nav-sections > ul, header .nav-tools > ul, header .nav-search > ul {
  list-style: none;
  margin-top: 0.8em;
  margin-bottom: 1em;
  padding-inline-start: 1rem;
}

header .nav-search {
  position: absolute;
  height: 2.4rem;
  top: 2.4rem;
  width: 2.4rem;
  right: 6rem;
}

header .nav-search > ul {
  margin: 0;
  width: 2.4rem;
  height: 2.4rem;
  padding-inline-start: 0;
}

/* Set mobile nav section elements to transparent when the nav isn't open to allow for the animation */
header .nav-sections > ul li {
  opacity:0;
}

/* Lower sections menu item container */
header .nav-sections {
  width: 100%;
}

/* Adjust sections nav menu elements with a drop down to allow for the decoration element */
header .nav-sections .nav-drop {
  position: relative;
  text-decoration: underline;
  width: fit-content;
}

header .nav-sections .nav-drop::after {
  border-right: .3rem solid #fff;
  border-top: .3rem solid #fff;
  content: "";
  display: block;
  height: 1.0rem;
  margin-top: -.2rem;
  position: absolute;
  right: -2rem;
  top: 50%;
  transform: rotate(45deg);
  width: 1.0rem;
}

/***** Styling specific to the mobile mode nav menu when closed *****/

  /* For mobile mode hide the menus so they can be animated when opened */
  header #nav .nav-sections, header #nav .nav-tools {
    display: none;
    height: 0;
    visibility: hidden;
    transition: opacity .36s ease-in-out,transform .36s ease-in-out,-webkit-transform .36s ease-in-out;
  }

  /* Styling for the search icon  */
  header #nav .nav-search > ul > li {
    line-height: 0;
  }

  /*  Styles relating to the 'hamburger' menu button */
header #nav .nav-hamburger {
  background-color: transparent;
  border: 0;
  cursor: pointer;
  height: 1.8rem;
  padding: 0;
  position: absolute;
  right: 2rem;
  top: 2.8rem;
  width: 1.8rem;
  z-index: 7;
}

  header #nav .nav-hamburger button {
    margin: 0;
    border: 0;
    border-radius: 0;
    padding: 0;
    background-color: var(--nav-background-color);
    color: inherit;
    overflow: initial;
    text-overflow: initial;
    white-space: initial;
    z-index: 7;
  }

  header #nav .nav-hamburger-icon {
    top: 50%;
    position: absolute;
  }

  header #nav .nav-hamburger-icon,
  header #nav .nav-hamburger-icon::before,
  header #nav .nav-hamburger-icon::after {
    display: block;
    width: 100%;
    height: 2.4rem;
  }

  header #nav .nav-hamburger-icon::before,
  header #nav .nav-hamburger-icon::after {
    content: '';
    position: absolute;
    background: currentcolor;
  }

  /* Draw the hamburger icon through pseudo classes when nav is closed */
  header #nav[aria-expanded="false"] .nav-hamburger-icon,
  header #nav[aria-expanded="false"] .nav-hamburger-icon::before,
  header #nav[aria-expanded="false"] .nav-hamburger-icon::after {
    height: 0.3rem;
    background: currentcolor;
  }

  header #nav[aria-expanded="false"] .nav-hamburger-icon::before {
    top: -0.6rem;
  }

  header #nav[aria-expanded="false"] .nav-hamburger-icon::after {
    top: 0.6rem;
  }


/***** Styling specific to the mobile mode nav menu when expanded *****/

  /* Define the animation that occurs when the mobile nav menu is expanded */
  header .animate-open-backdrop {
    transform: scale(70);
    transition: -webkit-transform .5s ease;
    transition: transform .5s ease,-webkit-transform .5s ease;
  }

  /* Switch the color of all text elements down the nav to white when expanded */
  header #nav[aria-expanded="true"] {
    color: var(--mobile-nav-extended-color);
  }

  /* Class added to the logo when the menu expands to have it rendered white */
  header .logo-white {
    color: var(--mobile-nav-extended-logo-color);
  }

/* Change layout of the main nav container to align all left in a simple block */
  header #nav[aria-expanded="true"] .header-navigation {
    width: 100%;
    display: block;
    position: absolute;
    left: 0;
    top: 12.5rem;
    overflow: scroll;
    padding: .3rem 2rem 14rem;
    box-sizing: border-box;
  }


  /* Styling for nav section container */
  header #nav[aria-expanded="true"] .nav-sections {
    height: auto;
    display: block;
    visibility: visible;
    left: 0;
    overflow: hidden;
    top: 12.5rem;
    z-index: 6;
  }

  /* Define the style for regular nav section items */
  header #nav[aria-expanded="true"] .nav-sections > ul {
    max-width: 225px;
    min-width: 225px;
    list-style: none;
    margin-top: 0;
    margin-bottom: 1em;
    padding-inline-start: 0;
  }
/* ... */

